styles.css
*,
*::before,
*::after {
  box-sizing: border-box;
}

:root {
  --color-bg: #fbf9f3;
  --color-text: #ffffff;

  --font-main: "Inter", sans-serif;
  --font-title: "Poppins", sans-serif;
}

body {
  display: flex;
  flex-direction: column;
  margin: 0px;

  align-items: center;
  background-color: var(--color-bg);
  font-family: var(--font-main);

  transition: transform 0.3s ease;
}

body > header,
body > main {
  display: flex;
  flex-direction: column;
  margin: 0px;

  align-items: center;
}

.logo {
  max-width: 80%;
}

h1 {
  margin: 0;
  margin-top: 32px;

  font-weight: bolder;
  font-size: 41px;
}

.showcase-panel {
  width: 84vw;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;

  background-color: black;
}

.showcase-panel > h2 {
  text-align: center;
  font-family: var(--font-title);
  font-size: 41px;
  font-style: italic;
  color: #ffffff;
  margin: 4px;
}

.showcase-picture {
  padding-left: 5%;
  padding-right: 5%;
  padding-top: 10%;
  padding-bottom: 10%;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  gap: 16%;
}

.p-left {
  z-index: 1;
  transform: translate(0, 0) rotate(-5deg);
  height: 25%;
  width: 25%;
}

.p-right {
  z-index: 1;
  transform: translate(0, 0) rotate(+5deg);
  height: 25%;
  width: 25%;
}

.p-cover {
  position: absolute;
  z-index: 1;
  max-width: 20%;
  height: auto;
}

.showcase-panel > button {
  width: fit-content;
  border: solid #ffffff 2px;
  padding: 4px;
  margin-bottom: 2%;

  text-align: center;
  font-size: 32px;
  font-style: italic;
  color: #ffffff;

  background-color: black;

  cursor: pointer;
}

.about-panel {
  display: flex;
  gap: 16px;
}

.about-panel > div {
  width: fit-content;
  justify-content: center;
  align-items: center;
  max-width: 50vw;
}

.about-panel > div > p {
  font-size: 24px;
}

.about-title {
  font-weight: bold;
}

.p-about {
  max-height: 650px;
  width: auto;
}

.info-panel {
  display: flex;
}

iframe {
  width: 600px;
  height: 500px;
}

.contact-info {
  padding-top: 70px;
  width: 600px;
  height: 500px;
}

.contact-info > div {
  display: flex;
  flex-direction: column;
  gap: 16px;
}

.contact-info > div > p {
  font-size: 32px;
  padding-bottom: 4px;
  margin: 0;
  font-weight: bold;
}

.icon {
  display: inline-flex;
  gap: 16px;
  color: black;
  height: 48px;
  width: fit-content;
  padding: 8px;
  border-radius: 12px;
  align-items: center;
}

.icon img {
  height: 32px;
}

.icon:hover {
  opacity: 0.6;
  background: rgba(251, 249, 243, 0.89);
}

.footer {
  width: 100%;
  padding-left: 48px;
  padding-right: 48px;
  padding-top: 16px;
  padding-bottom: 16px;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-between;

  background-color: black;
  color: #ffffff;
}

.popup {
  position: fixed;
  z-index: 1200;
  inset: 0;
  background: rgba(251, 249, 243, 0.89);

  display: flex;
  align-items: center;
  justify-content: center;

  opacity: 0;
  pointer-events: none;
  transition: 0.3s ease;
}

.popup.active {
  opacity: 1;
  pointer-events: auto;
}

.popup-content {
  display: flex;
  flex-direction: column;
  background-color: var(--color-bg);
  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.08);
  max-width: 420px;
  width: 90%;
  gap: 16px;
  padding: 32px;
  text-align: center;
  align-items: center;

  transform: translateY(20px);
  transition: 0.3s ease;
}

.popup-thanks {
  font-size: 32px;
  margin: 0;
  font-weight: bolder;
}

.popup-content-instruction {
  text-align: left;
}

.popup.active .popup-content {
  transform: translateY(0);
}

.downloadBtn {
  cursor: pointer;
  background-color: black;
  border-radius: 8px;
  color: #ffffff;
  width: fit-content;
  padding-left: 32px;
  padding-right: 32px;
  padding-top: 12px;
  padding-bottom: 12px;
}

.downloadBtn > p {
  margin: 0;
}

@media (max-width: 768px) {
  h1 {
    margin: 0;
    margin-top: 16px;

    text-overflow: clip;
    font-weight: bolder;
    font-size: 90%;
  }

  .showcase-panel {
    width: 96vw;
  }

  .showcase-panel > h2 {
    font-size: 100%;
  }

  .p-left {
    z-index: 1;
    transform: translate(0, 0) rotate(-5deg);
    height: 40%;
    width: 40%;
  }

  .p-right {
    z-index: 1;
    transform: translate(0, 0) rotate(+5deg);
    height: 40%;
    width: 40%;
  }

  .p-cover {
    position: absolute;
    z-index: 1;
    max-width: 30%;
    height: auto;
  }

  .showcase-panel > button {
    font-size: 80%;
  }

  .about-panel {
    flex-direction: column;
    align-items: center;
  }

  .about-panel > div {
    display: flex;
    flex-direction: column;
    justify-content: center;
    text-align: center;
    width: 60%;
  }

  .about-panel > div > p {
    margin-top: 4px;
    margin-bottom: 4px;
    font-size: 12px;
  }

  .about-title {
    font-weight: bold;
  }

  .p-about {
    width: 60%;
    max-height: auto;
  }

  .info-panel {
    flex-direction: column;
    align-items: center;
  }

  .contact-info {
    padding: 16px;
    max-width: 80%;
    height: auto;
  }

  .contact-info > div {
    display: flex;
    flex-direction: column;
    text-align: center;
    align-items: center;
    gap: 8px;
  }

  iframe {
    width: auto;
    height: 560px;
  }

  footer {
    flex-direction: column !important;
  }

  .popup-content {
    max-width: 80%;
    gap: 8px;
    padding: 16px;
  }
}

